@@ -177,9 +177,16 @@ static void open_connection (CONNECTION_DATA *connection)
     {
         sprintf (buf, _("*** No port specified - assuming port 23\n"));
         textfield_add (connection->window, buf, MESSAGE_NORMAL);
-		g_free(connection->port);
+		if (connection->port[0] != '\0')
+		{
+			g_free(connection->port);
+		}
 		connection->port = g_strdup("23");
-		g_free(port);
+
+		if (port[0] != '\0')
+		{
+			g_free(port);
+		}
         port = g_strdup("23");
     }
 
